--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
 
 <div class="center_div">
   <h1>Hello World!</h1>
-  <p>This is the NEW example which contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
+  <p>This is the NEW NEW example which contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
 </div>
 
 </body>
